--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
 	</head>
 	<body data-spy="scroll" data-target=".navbar" data-offset="51">
 		<!-- Navbar Start -->
-		<nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
-			<a href="index.html" class="navbar-brand ml-lg-3">
-				<h1 class="m-0 display-5"><span class="text-primary">Ishraq </span>Ahmed Esha</h1>
-			</a>
-			<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse px-lg-3" id="navbarCollapse">
-				<div class="navbar-nv m-auto py-0">
-					<a href="#home" class="nav-item nav-link active">Home</a>
-					<a href="#about" class="nav-item nav-link">About</a>
-					<a href="#qualification" class="nav-item nav-link">Quality</a>
-                	<a href="#skill" class="nav-item nav-link">Skill</a>
-                	<a href="#service" class="nav-item nav-link">Service</a>
-                	<a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                	<a href="#testimonial" class="nav-item nav-link">Review</a>
-                	<a href="#contact" class="nav-item nav-link">Contact</a>
-                </div>
-                <a href="" class="btn btn-menu d-none d-lg-block" style="background-color#457efa; color:# ffffff;">Hire Me</a>
+    <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
+        <a href="index.html" class="navbar-brand ml-lg-3">
+            <h1 class="m-0 display-5"><span class="text-primary">Free</span>Folio</h1>
+        </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse px-lg-3" id="navbarCollapse">
+            <div class="navbar-nav m-auto py-0">
+                <a href="#home" class="nav-item nav-link active">Home</a>
+                <a href="#about" class="nav-item nav-link">About</a>
+                <a href="#qualification" class="nav-item nav-link">Quality</a>
+                <a href="#skill" class="nav-item nav-link">Skill</a>
+                <a href="#service" class="nav-item nav-link">Service</a>
+                <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
+                <a href="#testimonial" class="nav-item nav-link">Review</a>
+                <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-        </nav>
-        <!-- Navbar End -->
+            <a href="" class="btn btn-menu d-none d-lg-block" style="background-color:#457efa; color: #ffffff;">Hire Me</a>
+        </div>
+    </nav>
+    <!-- Navbar End -->
 
         <!-- Header Start -->
         <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
@@ -61,7 +61,7 @@
         				<h3 class="text-white font-weight-normal mb-3">Hello, I am</h3>
         				<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Ishraq Ahmed Esha</h1>
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
-        				<div class="typed-text d-none">Software Developer, Engineer, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert</div>
+        				<div class="typed-text d-none">Software Developer, Competitive Programmer, Engineer, Critical Thinker, Problem Solver, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert</div>
         				<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
         					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
         					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" target="_blank" class="btn btn-white mr-4">Download CV</a>
@@ -132,7 +132,7 @@
         						<h6 class="font-weight-bold">65%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -141,7 +141,7 @@
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         			</div>
@@ -152,7 +152,7 @@
         						<h6 class="font-weight-bold">90%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -161,7 +161,7 @@
         						<h6 class="font-weight-bold">75%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -170,7 +170,7 @@
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         			</div>
