scroll button and js libraries update

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         						<h6 class="font-weight-bold">85%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -132,7 +132,7 @@
         						<h6 class="font-weight-bold">65%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -141,7 +141,7 @@
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         			</div>
@@ -152,7 +152,7 @@
         						<h6 class="font-weight-bold">90%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -161,7 +161,7 @@
         						<h6 class="font-weight-bold">75%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -170,7 +170,7 @@
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         			</div>
@@ -392,5 +392,43 @@
        				Review</h1>
        				<h1 class="position-absolute text-uppercase text-primary">Clients Say</h1>
        			</div>
+       			<div class="row justify-content-center">
+       				<div class="col-lg-9">
+       					<div class="owl-carousel testimonial-carousel">
+       						<div class="text-center">
+       							<i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+       							<h4 class="font-weight-light mb-4">Awesome time maintainer and work very fluently with perfect dedication and deliver his work in time. The most powerful tool is punctuality and honest as well as dedication.</h4>
+       							<img class="img-fluid wounded-circle mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px";>
+       							<h5 class="font-weight-bold m-0">Bruce Mckanzie</h5>
+       							<span>Busisnessman</span>
+       						</div>
+
+
+
+
+
+
+
+       	<!-- Scroll to Bottom -->
+       	<i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
+
+       	<!-- Back to Top -->
+       	<a href="#" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
+       	<!-- JavaScript Libraries -->
+       	<!-- JavaScript Libraries -->
+       	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    	<script src="lib/typed/typed.min.js"></script>
+    	<script src="lib/easing/easing.min.js"></script>
+    	<script src="lib/waypoints/waypoints.min.js"></script>
+    	<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    	<script src="lib/isotope/isotope.pkgd.min.js"></script>
+    	<script src="lib/lightbox/js/lightbox.min.js"></script>
+
+    	<!-- Template JavaScript -->
+    	<script src="js/main.js"></script>
+
+
 	</body>
 </html>
