--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         				<h3 class="text-white font-weight-normal mb-3">Hello, I am</h3>
         				<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Ishraq Ahmed Esha</h1>
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
-        				<div class="typed-text d-none">Software Developer, Competitive Programmer, Engineer, Critical Thinker, Problem Solver, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert</div>
+        				<div class="typed-text d-none">Software Developer, Competitive Programmer, Engineer, Critical Thinker, Problem Solver, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert, Data Analyst</div>
         				<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
         					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
         					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" target="_blank" class="btn btn-white mr-4">Download CV</a>
@@ -421,6 +421,52 @@
        			</div>
        		</div>
        	</div>
+       	<!-- Testimonial End -->
+
+       	<!-- Contact Start -->
+       	<div class="conatainer-fluid py-5" id="contact">
+       		<div class="container">
+       			<div class="position-relative d-flex align-items-center justify-content-center">
+       				<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
+       				<h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
+       			</div>
+       			<div class="row justify-content-center">
+       				<div class="col-lg-8">
+       					<div class="contact-form text-center">
+       						<div id="success"></div>
+       						<form name="sentMessage" id="contactForm" novalidate="novalidate">
+       							<div class="form-row">
+       								<div class="control-group col-sm-6">
+       									<input type="text" class="form-control p-4" id="name" placeholder="Your Name"
+       									required="required" data-validation-required-message="Please enter your name"/>
+       									<p class="help-block text-danger"></p>
+       								</div>
+       								<div class="control-group col-sm-6">
+       									<input type="email" class="form-control p-4" id="email" placeholder="Your Email"
+       									required="required" data-validation-required-meassage="Please enter your email"/>
+       									<p class="help-block text-danger"></p>
+       								</div>
+       							</div>
+       							<div class="control-group">
+       								<input type="text" class="form-control p-4" id="subject" placeholder="Subject"
+       								required="required" data-validation-required-message="Please enter a subject"/>
+       								<p class="help-block text-danger"></p>
+       							</div>
+       							<div class="control-group">
+       								<textarea class="form-control py-3 px-4" rows="5" id="message" placeholder="Message"
+       								required="required" data-validation-required-message="Please enter your message"></textarea>
+       								<p class="helop-block text-danger"></p>
+       							</div>
+       							<div>
+       								<button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Send Message</button>
+       							</div>
+       						</form>
+       					</div>
+       				</div>
+       			</div>
+       		</div>
+       	</div>
+       	<!-- Contact End -->
 
 
        	<!-- Scroll to Bottom -->
