first page design improve with icon

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     </nav>
     <!-- Navbar End -->
 
+
+
+
         <!-- Header Start -->
         <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
         	<div class="container">
@@ -62,17 +65,41 @@
         				<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Ishraq Ahmed Esha</h1>
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
         				<div class="typed-text d-none">Software Developer, Competitive Programmer, Engineer, Critical Thinker, Problem Solver, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert, Data Analyst</div>
-        				<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
-        					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
+        				<!--<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
+        					 <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i>
         					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" target="_blank" class="btn btn-white mr-4">Download CV</a>
+
+        					
+        					For Play Button
         					<a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>
-        				</div>
+
+        					<a class="btn btn-light btn-social mr-2" href="https://github.com/ahmedishraq" target="_blank"><i class="fab fa-github"></i></a>
+        				</div> -->
         			</div>
         			<div class="col-lg-6 px-8 pl-lg-0 pb-5 pb-lg-4 about-img">
         				<img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="Profile Picture">
         			</div>
+        			<!-- Testing social media icon Start -->
+        			<div class="d-flex">  
+						<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
+       					<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+       					<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+       					<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-instagram"></i></a>
+       					<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-github"></i></a>   
+					</div>
+					<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
+        					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
+        					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" target="_blank" class="btn btn-light mr-4"><i class="fa fa-download"></i>  Download CV</a>
+
+        					
+        					<!-- For Play Button -->
+        					<!--<a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>-->
+
+        					<!--<a class="btn btn-light btn-social mr-2" href="https://github.com/ahmedishraq" target="_blank"><i class="fab fa-github"></i></a> -->
+        				</div>
         		</div>
         	</div>
+        	<!-- Testing social media icon End-->
         </div>
         <!-- Header End -->
 
@@ -467,6 +494,17 @@
        		</div>
        	</div>
        	<!-- Contact End -->
+
+       	<!-- Footer Start -->
+       	<div class="container-fluid bg-primary text-white mt-5 py-1 px-sm-1 px-md-5">
+       		<div class="container text-center py-5">
+       			<div class="d-flex justify-content-center mb-4">
+       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-instagram"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-github"></i></a>
+       			</div>
 
 
        	<!-- Scroll to Bottom -->
