--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 display-5"><span class="text-primary">Free</span>Folio</h1>
+            <h1 class="m-0 display-5"><span class="text-primary">Ishraq</span> Ahmed Esha</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -113,7 +113,7 @@
         		</div>
         		<div class="row align-items-center">
         			<div class="col-lg-5 pb-4 pb-lg-0">
-        				<img class="img-fluid rounded w-100" src="img/about.png" alt="Ishraq">
+        				<img class="img-fluid rounded w-100" src="img/new-1.jpg" alt="Ishraq">
         			</div>
         			<div class="col-lg-7">
         				<h3 class="mb-4">Software Developer</h3>
@@ -505,6 +505,22 @@
        				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-instagram"></i></a>
        				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-github"></i></a>
        			</div>
+       			<div class="d-flex justify-content-center mb-3">
+       				<a class="text-white" href="#">Privacy</a>
+       				<span class="px-3">|</span>
+       				<a class="text-white" href="#">Terms</a>
+       				<span class="px-3">|</span>
+       				<a class="text-white" href="#">FAQs</a>
+       				<span class="px-3">|</span>
+       				<a class="text-white" href="#">Help</a>
+       				<span class="px-3">|</span>
+       			</div>
+       			<p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">ahmed_ishraq</a>. All Rights  Reserved. Designed by <a class="text-white font-weight-bold" href="#">Ishraq Ahmed</a>
+       			</p>
+       		</div>
+       	</div>
+       	<!-- Footer End -->
+
 
 
        	<!-- Scroll to Bottom -->
