--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         			</div>
         			<!-- Testing social media icon Start -->
         			<div class="d-flex">  
-						<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-       					<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-       					<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-       					<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-instagram"></i></a>
-       					<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-github"></i></a>   
+						<a class="btn btn-light btn-social mr-2" href="https://twitter.com/ahmed_ishraq" target="_blank"><i class="fab fa-twitter"></i></a>
+       					<a class="btn btn-light btn-social mr-2" href="https://facebook.com/ishraq.ahmed.14" target="_blank"><i class="fab fa-facebook-f"></i></a>
+       					<a class="btn btn-light btn-social mr-2" href="http://linkedin.com/in/ishraq-ahmed-esha-244978172" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+       					<a class="btn btn-light btn-social mr-2" href="https://www.instagram.com/ahmed_ishraq" target="_blank"><i class="fab fa-instagram"></i></a>
+       					<a class="btn btn-light btn-social mr-2" href="https://github.com/ahmedishraq" target="_blank"><i class="fab fa-github"></i></a>   
 					</div>
 					<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
         					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
@@ -499,11 +499,11 @@
        	<div class="container-fluid bg-primary text-white mt-5 py-1 px-sm-1 px-md-5">
        		<div class="container text-center py-5">
        			<div class="d-flex justify-content-center mb-4">
-       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-instagram"></i></a>
-       				<a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-github"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="https://twitter.com/ahmed_ishraq" target="_blank"><i class="fab fa-twitter"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="https://facebook.com/ishraq.ahmed.14" target="_blank"><i class="fab fa-facebook-f"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="https://linkedin.com/in/ishraq-ahmed-esha-244978172" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="https://www.instagram.com/ahmed_ishraq" target="_blank"><i class="fab fa-instagram"></i></a>
+       				<a class="btn btn-light btn-social mr-2" href="https://github.com/ahmedishraq" target="_blank"><i class="fab fa-github"></i></a>
        			</div>
        			<div class="d-flex justify-content-center mb-3">
        				<a class="text-white" href="#">Privacy</a>
