--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 display-5"><span class="text-primary">Ishraq</span> Ahmed Esha</h1>
+            <h1 class="m-0 display-5" style="font-family: cursive;"><span class="text-primary">Ishraq</span> Ahmed Esha</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -155,7 +155,7 @@
         				</div>
         				<div class="skill mb-4">
         					<div class="d-flex justify-content-between">
-        						<h6 class="font-weight-bold">Python</h6>
+        						<h6 class="font-weight-bold">Python/ Django/ Mysql</h6>
         						<h6 class="font-weight-bold">65%</h6>
         					</div>
         					<div class="progress">
@@ -164,40 +164,77 @@
         				</div>
         				<div class="skill mb-4">
         					<div class="d-flex justify-content-between">
-        						<h6 class="font-weight-bold">HTML</h6>
+        						<h6 class="font-weight-bold">HTML/ CSS/ JavaScript/ Bootstrap</h6>
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
         					<div class="progress">
         						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
-        			</div>
-        			<div class="col-md-6">
         				<div class="skill mb-4">
         					<div class="d-flex justify-content-between">
-        						<h6 class="font-weight-bold">MS Office</h6>
-        						<h6 class="font-weight-bold">90%</h6>
+        						<h6 class="font-weight-bold">Android/ Spring-Boot</h6>
+        						<h6 class="font-weight-bold">50%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
         					<div class="d-flex justify-content-between">
-        						<h6 class="font-weight-bold">Data Analysis</h6>
-        						<h6 class="font-weight-bold">75%</h6>
-        					</div>
-        					<div class="progress">
-        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-        					</div>
-        				</div>
-        				<div class="skill mb-4">
-        					<div class="d-flex justify-content-between">
-        						<h6 class="font-weight-bold">Problem Solving</h6>
+        						<h6 class="font-weight-bold">TeamWork/ Communication/ Creativity/ Innovation</h6>
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
         					<div class="progress">
         						<div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="col-md-6">
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">AI/ Data Science/ Kaggle</h6>
+        						<h6 class="font-weight-bold">50%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">Illustrator/ Lightroom/ Photoshop/ PremierPro/ XD
+								</h6>
+        						<h6 class="font-weight-bold">60%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">Word/ Excel/ PowerPoint/ Docs Writing</h6>
+        						<h6 class="font-weight-bold">80%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">Git/ Arduino/ Jetson Nano</h6>
+        						<h6 class="font-weight-bold">50%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">Data Analysis/ Problem Solving/ Critical Thinking</h6>
+        						<h6 class="font-weight-bold">80%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         			</div>
@@ -515,7 +552,7 @@
        				<a class="text-white" href="#">Help</a>
        				<span class="px-3">|</span>
        			</div>
-       			<p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">ahmed_ishraq</a>. All Rights  Reserved. Designed by <a class="text-white font-weight-bold" href="#">Ishraq Ahmed</a>
+       			<p class="m-0" style="font-family: cursive;">&copy; <a class="text-white font-weight-bold" href="#">ahmed_ishraq</a>. All Rights  Reserved. Designed by <a class="text-white font-weight-bold" href="#">Ishraq Ahmed</a>
        			</p>
        		</div>
        	</div>
