--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         					</div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
-        						<h5 class="font-weight-bold mb-1">Higher Secondery</h5>
+        						<h5 class="font-weight-bold mb-1">Higher Secondary</h5>
         						<p class="mb-2"><strong>Dhaka Residential Model College</strong> | <small>2016 - 2018</small></p>
         						<p>Major subject was Physics, Chemisry, Higher Math, General Math, Biology</p>
         					</div>
