--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<link rel="shortcut icon" href="img/favicon2.png" type="image/png">
 
 		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+
 		<meta content="Porfolio Website" name="keywords">
 		<meta content="Portfolio Website" name="description">
 		
@@ -50,7 +52,7 @@
 		<!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 display-5" style="font-family: cursive;"><span class="text-primary">Ishraq</span> Ahmed Esha</h1>
+            <h1 class="m-0 display-5" style="font-family: cursive;"><span class="text-primary">Ishraq</span></h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -78,7 +80,7 @@
         <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
         	<div class="container">
         		<div class="row align-items-center">
-        			<div class="col-lg-7 text-center text-lg-left">
+        			<div class="col-lg-7 col-md-10 col-sm-12 text-center text-lg-left">
         				<h3 class="text-white font-weight-normal mb-3">Hello, I am</h3>
         				<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Ishraq Ahmed Esha</h1>
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
@@ -275,18 +277,21 @@
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Bachelor of Scinece</h5>
+        						<h6 class="font-weight-bold mb -1">in Computer Science and Engineering</h6>
         						<p class="mb-2"><strong>BRAC University</strong> | <small>2019 - Current</small></p>
         						<p>Pursuing my undergraduation degree in Computer Science and Engineering at BRAC University</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Higher Secondary</h5>
+        						<h6 class="font-weight-bold mb -1">in Science</h6>
         						<p class="mb-2"><strong>Dhaka Residential Model College</strong> | <small>2016 - 2018</small></p>
         						<p>Major subject was Physics, Chemisry, Higher Math, General Math, Biology</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Secondary</h5>
+        						<h6 class="font-weight-bold mb -1">in Science</h6>
         						<p class="mb-2"><strong>Dhanmondi Govt. Boys' High School</strong> | <small>2006 - 2016</small></p>
         						<p>Major subject was Physics, Chemistry, Higher Math, General Math, Biology</p>
         					</div>
