--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         					</div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
-        						<h5 class="font-weight-bold mb-1">Senior Executive</h5>
+        						<h5 class="font-weight-bold mb-1">Assistant Director</h5>
         						<p class="mb-2"><strong>Robotics Club of BRAC University</strong> | <small>2020 - Current</small> | <small>Excellent</small></p>
         						<p>Maintain the IT facilities and communication work along side maintain the club database</p>
         					</div>
